52_NetworkPolicies/configs/eg1-block-all/dep-caddy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-caddy
  namespace: codingbee
spec:
  replicas: 2 
  selector:
    matchLabels:
      component: caddy_pod
  template:
    metadata:
      labels:
        component: caddy_pod
    spec: 
      containers:
        - name: cntr-caddy
          image: abiosoft/caddy 
          ports:
            - containerPort: 2015       # this particular image listens on this port by default. 
          command: ["/bin/sh", "-c"]
          args:
            - |
              /bin/echo "You've hit caddy - $HOSTNAME" > /srv/index.html
              /bin/parent caddy --conf /etc/Caddyfile --log stdout --agree=$ACME_AGREE
