52_NetworkPolicies/configs/eg1-block-all/np-block-all-by-default.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-all-by-default
  namespace: default
spec:
  podSelector: {}     # This empty map means, apply this network policy to all pods in the given namespace
